[package]
    authors = [
        "LightArrowsEXE <LightArrowsReboot@gmail.com>",
        "Riven Skaye <riven@tae.moe>"
    ]
    categories = ["command-line-utilities", "config", "encoding"]
    description = "A package manager for VapourSynth projects that aims to provide fully reproducible project environments"
    edition = "2021"
    keywords = ["environment", "portable", "python", "vapoursynth"]
    license = "MPL-2.0"
    license-file = "LICENSE"
    name = "vspm"
    readme = "README.md"
    repository = "https://github.com/VapourPackages/vspm"
    version = "0.1.0"

[dependencies]
    clap = { version = "^4.5", default-features = false, features = [
        "color",
        "derive",
        "env",
        "help",
        "std",
        "suggestions",
        "wrap_help"
    ] }
    tokio = { version = "^1", features = [
        "fs",
        "io-std",
        "io-util",
        "macros",
        "net",
        "parking_lot",
        "process",
        "rt",
        "signal"
    ] }
